objects/Vehicle_Options__c.object
<CustomObject>
    <description>A list of options and packages on a per-vehicle basis.</description>
    <fields>
        <fullName>Forcebase_Deal_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Forcebase_Deal ID</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Item_Count__c</fullName>
        <label>Item Count</label>
        <summaryForeignKey>Vehicle_Options_Item__c.Vehicle_Options__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Processing_Pipeline_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Processing Pipeline</label>
        <referenceTo>Processing_Pipeline__c</referenceTo>
        <relationshipLabel>Vehicle Options</relationshipLabel>
        <relationshipName>Vehicle_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_Description__c</fullName>
        <label>Vehicle Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Vehicle Options</relationshipLabel>
        <relationshipName>Vehicle_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vehicle Options</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Vehicle_Description__c</columns>
        <columns>Forcebase_Deal_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>